--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
         ENV_VARIABLE: ${ENV_VARIABLE}
         NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
     restart: always
-    ports:
-      - 8030
+    # ports:
+    #   - 8030
     networks:
       - dokploy-network
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.next-app.rule=Host(`next-app.dokploy.com`)
-      - traefik.http.routers.next-app.entrypoints=websecure
-      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
-      - traefik.http.services.next-app.loadbalancer.server.port=3000
+    # labels:
+    #   - traefik.enable=true
+    #   - traefik.http.routers.next-app.rule=Host(`next-app.dokploy.com`)
+    #   - traefik.http.routers.next-app.entrypoints=websecure
+    #   - traefik.http.routers.next-app.tls.certResolver=letsencrypt
+    #   - traefik.http.services.next-app.loadbalancer.server.port=3000
   # Add more containers below (nginx, postgres, etc.)
 
 # Define a network, which allows containers to communicate
